change validator to node
