# cmd/irita/cmd/genvalidators.go
@@ -22,7 +22,7 @@ import (
 	"github.com/cosmos/cosmos-sdk/types/module"
 
 	"github.com/bianjieai/iritamod/modules/genutil"
-	"github.com/bianjieai/iritamod/modules/validator"
+	"github.com/bianjieai/iritamod/modules/node"
 	cautil "github.com/bianjieai/iritamod/utils/ca"
 )
 
@@ -105,8 +105,8 @@ func AddGenesisValidatorCmd(
 				return errors.Wrap(err, "failed to build create-validator message")
 			}
 
-			if msg, ok := msg.(*validator.MsgCreateValidator); ok {
-				validatorGenState := validator.GetGenesisStateFromAppState(cdc, genesisState)
+			if msg, ok := msg.(*node.MsgCreateValidator); ok {
+				validatorGenState := node.GetGenesisStateFromAppState(cdc, genesisState)
 
 				cert, err := cautil.ReadCertificateFromMem([]byte(msg.Certificate))
 				if err != nil {
@@ -134,7 +134,7 @@ func AddGenesisValidatorCmd(
 
 				validatorGenState.Validators = append(
 					validatorGenState.Validators,
-					validator.NewValidator(
+					node.NewValidator(
 						tmhash.Sum(msg.GetSignBytes()),
 						msg.Name, msg.Description, pk,
 						msg.Certificate, msg.Power, operator,
@@ -146,7 +146,7 @@ func AddGenesisValidatorCmd(
 					return fmt.Errorf("failed to marshal validator genesis state: %w", err)
 				}
 
-				genesisState[validator.ModuleName] = validatorGenStateBz
+				genesisState[node.ModuleName] = validatorGenStateBz
 			}
 
 			if err = mbm.ValidateGenesis(cdc, clientCtx.TxConfig, genesisState); err != nil {
